<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.cartrack.response.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/clickCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="#fff"
            card_view:cardBackgroundColor="?attr/cardBackground"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="8dp"
            card_view:cardMaxElevation="10dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-50dp"
                    android:background="@drawable/coupon_border" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="12dp"
                    android:paddingRight="12dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/nameOf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:singleLine="true"
                        android:text="@{user.name}"
                        android:textColor="?attr/tintColorOpp"
                        android:textSize="16sp"
                        tools:text="@string/User_Name" />

                    <TextView
                        android:id="@+id/emailA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:text="@{user.company.name}"
                        android:textSize="10dp"
                        tools:text="@string/Companey_Name" />

                    <TextView
                        android:id="@+id/comName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:text="@{user.phone}"
                        android:textSize="8dp"
                        tools:text="@string/Contact_Number" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>